syntax = "proto3";

package sfc_team;

import "google/protobuf/duration.proto";

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.General.Find.Filters";

message TeamsAvailabilityLimit
{
    google.protobuf.Duration from = 1;
    google.protobuf.Duration to = 2;
    repeated int32 days = 3;
}