syntax = "proto3";

package sfc_team;

import "google/protobuf/wrappers.proto";

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.General.Find.Filters";

message TeamsFinancialProfileFilter
{
    google.protobuf.BoolValue free_play = 6;
}