syntax = "proto3";

package sfc_team;

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.General.Find.Filters";

message TeamsInventaryProfileFilter
{
    repeated int32 shirts = 1;
}