syntax = "proto3";

package sfc_team;

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.Player.Find.Filters";

message TeamPlayerFilter
{
    repeated int32 statuses = 1;
}