syntax = "proto3";

package sfc_team;

import "Messages/Team/Player/Find/Filters/team_player_filter.proto";

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.Player.Find.Filters";

message TeamPlayersFilter
{
    TeamPlayerFilter team_player = 1;
}