syntax = "proto3";

package sfc_team;

import "Models/Common/pagination.proto";
import "Models/Common/sorting.proto";
import "Messages/Team/Player/Find/Filters/team_players_filter.proto";

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.Player.Find";

message GetTeamPlayersRequest
{
    Pagination pagination = 1;
    repeated Sorting sorting = 2;
    TeamPlayersFilter filter = 3;
}