syntax = "proto3";

package sfc_team;

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.Player.Get";

message GetTeamPlayerRequest
{
    int64 id = 1;
    int64 team_id = 2;
    int64 player_id = 3;
}