syntax = "proto3";

package sfc_team;

import "Models/Team/Player/team_player.proto";

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.Player.Get";

message GetTeamPlayerResponse
{
    TeamPlayer team_player = 1;
}