syntax = "proto3";

package sfc_team;

option csharp_namespace = "SFC.Team.Contracts.Models.Team.Data";

message DataValue
{
    int32 id = 1;
    string title = 2;
}