syntax = "proto3";

package sfc_team;

option csharp_namespace = "SFC.Team.Contracts.Models.Team.General";

message TeamFinancialProfile
{
    bool free_play = 1;
}