syntax = "proto3";

package sfc_team;

import "Models/Team/General/team_general_profile.proto";
import "Models/Team/General/team_financial_profile.proto";
import "Models/Team/General/team_inventary_profile.proto";

option csharp_namespace = "SFC.Team.Contracts.Models.Team.General";

message TeamProfile
{
    TeamGeneralProfile general = 1;
    TeamFinancialProfile financial = 2;
    TeamInventaryProfile inventary = 3;
}